--- a/starter-code/extra-french-soup/css/main.css
+++ b/starter-code/extra-french-soup/css/main.css
@@ -1,9 +1,80 @@
-/*Some necessary adjustments*/
-h1, body, html, main {
-  margin: 0;
+* {
+  font-family: Arial, Helvetica, sans-serif;
+  transition-delay: 5s;
 }
-/*Import the font and set the default size*/
-html {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 18px
+
+body {
+  margin-right: auto;
+  margin-left: auto;
+  width: 80%;
+}
+
+.header {
+  background-image: url("/module1/lab5/lab-css-recipes-clone/starter-code/apple-pie-starter-code/images/apple-pie.jpg");
+  background-position: 0, 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 600px;
+  padding: 0px 0px 0px 0px;
+  position: relative;
+}
+
+.h1 {
+  font-size: 3.5em;
+  color: white;
+  justify-content: center;
+  display: flex;
+  padding-top: 200px;
+  font-weight: lighter;
+
+}
+
+.intro {
+  padding-top: 30px;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  width: 75%;
+  font-size: 1.5 rem;
+}
+
+h3{
+  display: flex;
+  justify-content: start;
+  padding-left: 40px;
+
+}
+
+ul {
+  list-style-type: "- ";
+  padding-left: 60px;
+}
+
+ul> li {
+  padding: 5px;
+}
+
+.recipe{
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  width: 400px;
+}
+
+.directions {
+  list-style-type: decimal;
+}
+
+hr {
+  display: block;
+  margin-end: auto;
+  margin-start: auto;
+  border: 1px inset;
+  overflow: hidden;
+  margin-before: 0.5em;
+  margin-after: 0.5em;
+
+ width: 60%;
+ margin-right: auto;
+ margin-left: auto;
 }
