--- a/starter-code/apple-pie-starter-code/css/main.css
+++ b/starter-code/apple-pie-starter-code/css/main.css
@@ -1,26 +1,3 @@
-<<<<<<< HEAD
-.header {    
-    background-image: url("images/apple-pie.jpg");
-    background-position: 0, 0;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 650px;
-    padding: 50px 0px 0px 0px;
-    position: relative;
-    width:100%;
-}
-div {
-    display: flex;
-    color: black;
-    justify-content: center;
-    background-image: url("images/apple-pie.jpg");
-    z-index: 10;
-}
-
-.picture {
-    z-index: 0;
-}
-=======
 * {
     font-family: Arial, Helvetica, sans-serif;
     transition-delay: 5s;
@@ -33,7 +10,7 @@ body {
 }
 
 .header {
-    background-image: url("/module1/lab5/lab-css-recipes-clone/starter-code/apple-pie-starter-code/images/apple-pie.jpg");
+    background-image: url("../images/apple-pie.jpg");
     background-position: 0, 0;
     background-repeat: no-repeat;
     background-size: cover;
@@ -101,4 +78,3 @@ hr {
    margin-right: auto;
    margin-left: auto;
 }
->>>>>>> 8578cb9b2d4a14ef528d21856aa367ba5230d947
