--- a/starter-code/extra-french-soup/css/main.css
+++ b/starter-code/extra-french-soup/css/main.css
@@ -10,7 +10,7 @@ body {
 }
 
 .header {
-  background-image: url("/module1/lab5/lab-css-recipes-clone/starter-code/apple-pie-starter-code/images/apple-pie.jpg");
+  background-image: url("../images/apple-pie.jpg");
   background-position: 0, 0;
   background-repeat: no-repeat;
   background-size: cover;
